# xls2csv

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: test.yml
tests/: test_cli.py
tests/data/: basic-data.xlsx  basic-multi-sheets.xlsx  empty-file.xlsx  empty-null-data.xlsx  financial-data.xlsx  header-only.xlsx  large-numbers.xlsx  long-text.xlsx  multiple-data-types.xlsx  special-chars.xlsx
xls2csv/: cli.py  converter.py  exception.py  utils.py
