[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xls2csv"
version = "0.2.0"
description = "Simple but professional CLI tool to convert Excel files to CSV"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name="Ryuu Mitsuki", email="dhefam31@proton.me" }
]

dependencies = [
    "openpyxl",
    "click"
]

[project.scripts]
xls2csv = "xls2csv.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["xls2csv*"]