[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xls2csv"
version = "0.3.0-dev0"
description = "Simple but professional CLI tool to convert Excel files to CSV"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name="Ryuu Mitsuki", email="dhefam31@proton.me" }
]

dependencies = [
    "openpyxl",
    "click"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
xls2csv = "xls2csv.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xls2csv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
